# QuartiCal

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tbump.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
cubicalv2/: __init__.py  executor.py
cubicalv2/calibration/: calibrate.py  constructor.py  gain_types.py  solver.py
cubicalv2/data_handling/: data_handler.py  model_handler.py  ms_handler.py  predict.py
cubicalv2/flagging/: dask_flagging.py  flagging.py
cubicalv2/kernels/: complex.py  generics.py  gjones.py  gjones_chain.py  kernel_dispatcher.py  phase.py
cubicalv2/logging/: init_logger.py
cubicalv2/parser/: custom_types.py  default_config.yaml  parser.py  preprocess.py
cubicalv2/statistics/: stat_kernels.py  statistics.py
cubicalv2/utils/: dask.py  intervals.py  maths.py  timings.py
cubicalv2/weights/: weights.py
docs/: requirements.txt
docs/source/: conf.py  distribution.rst  examples.rst  gain_files.rst  gain_types.rst  index.rst  installation.rst  interpolation.rst  options.rst  parallelism.rst  usage.rst  utilities.rst
quartical/: executor.py  stimela_cabs.yaml
quartical/apps/: backup.py  plotter.py  smoothcal.py  stats.py  summary.py
quartical/calibration/: calibrate.py  constructor.py  gain_datasets.py  gain_types.py  interpolate.py  mapping.py  solver.py
quartical/config/: __init__.py  argument_schema.yaml  config_classes.py  converters.py  external.py  gain_schema.yaml  helper.py  helpstrings.yaml  internal.py  model_component_schema.yaml  parser.py  postinits.py  preprocess.py
quartical/data_handling/: __init__.py  angles.py  bda.py  chunking.py  degridder.py  model_handler.py  ms_handler.py  predict.py  selection.py
quartical/flagging/: flagging.py  flagging_kernels.py
quartical/gains/: __init__.py  baseline.py  conversion.py  converter.py  datasets.py  gain.py  parameterized_gain.py
quartical/gains/amplitude/: __init__.py  kernel.py
quartical/gains/complex/: __init__.py  approx_kernel.py  diag_kernel.py  kernel.py  kernel2.py  slow_kernel.py
quartical/gains/crosshand_phase/: __init__.py  kernel.py  null_v_kernel.py
quartical/gains/delay/: __init__.py  delay.py  kernel.py  pure_kernel.py  slow_kernel.py
quartical/gains/delay_and_offset/: __init__.py  kernel.py
quartical/gains/delay_and_tec/: __init__.py  kernel.py
quartical/gains/delay_tec_and_offset/: __init__.py  kernel.py
quartical/gains/feed_flip/: __init__.py
quartical/gains/general/: convenience.py  estimates.py  factories.py  flagging.py  generics.py  inversion.py  rbweights_kernel.py  rbweights_manager.py
quartical/gains/leakage/: __init__.py  kernel.py
quartical/gains/parallactic_angle/: __init__.py  kernel.py
quartical/gains/phase/: __init__.py  kernel.py  slow_kernel.py
quartical/gains/rotation/: __init__.py  kernel.py
quartical/gains/rotation_measure/: __init__.py  kernel.py
quartical/gains/tec/: __init__.py  kernel.py
quartical/gains/tec_and_offset/: __init__.py  kernel.py
quartical/interpolation/: interpolants.py  interpolate.py
quartical/kernels/: complex.py  convenience.py  delay.py  factories.py  generated.py  generated_delay.py  generated_phase.py  generics.py  helpers.py  kalman.py  phase.py
quartical/kernels/legacy/: complex.py  kalman.py  phase.py
quartical/logging/: __init__.py  init_logger.py
quartical/parser/: conf_spec.py  configuration.py  converters.py  custom_types.py  default_config.yaml  helper.py  helpstrings.yaml  parser.py  preprocess.py
quartical/scheduling/: __init__.py  annotation.py
quartical/statistics/: logging.py  stat_kernels.py  statistics.py
quartical/utils/: __init__.py  array.py  callables.py  collections.py  dask.py  datasets.py  intervals.py  maths.py  numba.py  smoothing.py  testing.py  timings.py  xarray.py
quartical/weights/: robust.py  weights.py
testing/: conftest.py  pytest.ini
testing/calibration/: test_mapping.py
testing/data/: tdlconf.profiles  test_config.yaml
testing/fixtures/: calibration.py  config.py  data_handling.py  gains.py
testing/gains/: test_complex.py  test_delay.py  test_phase.py  test_tec.py
testing/interpolation/: test_interpolants.py
testing/tests/calibration/: test_calibrate.py  test_constructor.py  test_mapping.py
testing/tests/config/: test_parser.py  test_preprocess.py
testing/tests/data_handling/: test_angles.py  test_model_handler.py  test_ms_handler.py  test_predict.py
testing/tests/gains/: test_amplitude.py  test_complex.py  test_crosshand_phase.py  test_crosshand_phase_null_v.py  test_delay.py  test_delay_and_offset.py  test_delay_and_tec.py  test_delay_init.py  test_delay_tec_and_offset.py  test_diag_complex.py  test_parallactic_angle.py  test_phase.py  test_rotation.py  test_rotation_measure.py  test_tec.py  test_tec_and_offset.py  test_tec_init.py
testing/tests/interpolation/: test_interpolants.py  test_interpolate.py
testing/tests/stimela/: 1gc_primary_recipe.yaml  1gc_recipe.yaml  selfcal.yaml  test_recipe.yaml
testing/utils/: gains.py
tests/: conftest.py  pytest.ini  test_config.yaml
tests/calibration/: test_calibrate.py  test_constructor.py  test_mapping.py
tests/config/: test_parser.py  test_preprocess.py
tests/data_handling/: test_model_handler.py  test_ms_handler.py  test_predict.py
tests/fixtures/: config.py
tests/gains/: test_amplitude.py  test_complex.py  test_delay.py  test_phase.py
tests/interpolation/: test_interpolants.py  test_interpolate.py
tests/parser/: test_config.yaml  test_parser.py  test_preprocess.py
tests/scheduling/: test_scheduling.py
tests/selection/: test_selects.py
tests/test_data/: 3C147_intrinsic.lsm.html  test_config.yaml
tests/utils/: test_dask.py
