[tool.poetry]
name = "quartical"
version = "0.2.5"
description = "Fast and flexible calibration suite for radio interferometer data."
repository = "https://github.com/ratt-ru/QuartiCal"
documentation = "https://quartical.readthedocs.io"
authors = ["Jonathan Kenyon <jonathan.simon.kenyon@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy"
]
include = [
    "quartical/config/argument_schema.yaml",
    "quartical/config/gain_schema.yaml",
    "quartical/stimela_cabs.yaml"
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
astro-tigger-lsm = [
    { version = ">=1.7.2, <=1.7.3", python = "<3.12" },
    { version = ">=1.7.4, <=1.7.4", python = ">=3.12"}
]
codex-africanus = {extras = ["dask", "scipy", "astropy", "python-casacore"], version = ">=0.4.1, <=0.4.1"}
colorama = ">=0.4.6, <=0.4.6"
columnar = ">=1.4.1, <=1.4.1"
dask = {extras = ["diagnostics"], version = ">=2023.5.0, <=2024.10.0"}
dask-ms = {extras = ["s3", "xarray", "zarr"], version = ">=0.2.23, <=0.2.23"}
distributed = ">=2023.5.0, <=2024.10.0"
loguru = ">=0.7.0, <=0.7.2"
matplotlib = ">=3.5.1, <=3.9.2"
omegaconf = ">=2.3.0, <=2.3.0"
pytest = ">=7.3.1, <=8.3.3"
requests = ">=2.31.0, <=2.32.3"
"ruamel.yaml" = ">=0.17.26, <=0.18.6"
stimela = ">=2.0"
tbump = ">=6.10.0, <=6.11.0"

[tool.poetry.scripts]
goquartical = 'quartical.executor:execute'
goquartical-config = 'quartical.config.parser:create_user_config'
goquartical-backup = 'quartical.apps.backup:backup'
goquartical-restore = 'quartical.apps.backup:restore'
goquartical-summary = 'quartical.apps.summary:summary'
goquartical-plot = 'quartical.apps.plotter:plot'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
