[project]
name = "quartical"
version = "0.2.6"
description = "Fast and flexible calibration suite for radio interferometer data."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Jonathan Kenyon", email = "jonathan.simon.kenyon@gmail.com"},
]
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astro-tigger-lsm>=1.8.0,<=1.8.0",
    "codex-africanus[dask,scipy,astropy,python-casacore]>=0.4.1,<=0.4.3",
    "colorama>=0.4.6,<=0.4.6",
    "columnar>=1.4.1,<=1.4.1",
    "dask[diagnostics]>=2023.5.0,<=2024.10.0",
    "dask-ms[s3,xarray,zarr]>=0.2.23,<=0.2.27",
    "distributed>=2023.5.0,<=2024.10.0",
    "loguru>=0.7.0,<=0.7.3",
    "matplotlib>=3.5.1,<=3.9.2",
    "omegaconf>=2.3.0,<=2.3.0",
    "requests>=2.31.0,<=2.32.5",
    "ruamel.yaml>=0.17.26,<=0.19.1",
    "stimela>=2.0",
]

[project.urls]
repository = "https://github.com/ratt-ru/QuartiCal"
documentation = "https://quartical.readthedocs.io"

[project.scripts]
goquartical = "quartical.executor:execute"
goquartical-config = "quartical.config.parser:create_user_config"
goquartical-backup = "quartical.apps.backup:backup"
goquartical-restore = "quartical.apps.backup:restore"
goquartical-summary = "quartical.apps.summary:summary"
goquartical-plot = "quartical.apps.plotter:plot"

[dependency-groups]
dev = [
    "pytest>=7.3.1,<=9.0.2",
    "tbump>=6.10.0,<=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quartical"]
